fix: clipping issue on trip stop panel
use modifiers property to restrict dragging to vertical
instead of relying on styling

--- a/src/app/(main)/trip/[id]/style.css
+++ b/src/app/(main)/trip/[id]/style.css
@@ -16,6 +16,9 @@
 .leaflet-popup-content {
   margin: 12px !important;
 }
+.custom-scrollbar {
+  scrollbar-gutter: stable;
+}
 .custom-scrollbar::-webkit-scrollbar {
   width: 8px;
 }
